✨ Implementar formulario de contacto funcional con EmailJS
- Configurar EmailJS con credenciales reales
- Añadir validación de formulario
- Implementar notificaciones de éxito/error
- Crear guías de configuración y solución de problemas
- Formulario completamente funcional y listo para producción

--- a/index.html
+++ b/index.html
@@ -628,6 +628,8 @@
         </div>
     </footer>
 
+    <!-- EmailJS CDN -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
