✨ Añadir proyecto TechStore Backend API al portfolio
- Nuevo proyecto backend con Spring Boot y JWT
- API REST completa para e-commerce
- Sistema de autenticación y roles
- Categorizado como proyecto Backend
- Enlace funcional al repositorio GitHub

--- a/index.html
+++ b/index.html
@@ -266,7 +266,34 @@
                             <span class="tech-tag"><i class="fab fa-sass"></i> SASS</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/jorgeoliver7/Portfolio-Website" target="_blank" class="project-link"><i class="fab fa-github"></i></a>
+                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card" data-category="backend">
+                    <div class="project-image">
+                         <i class="fas fa-shopping-cart"></i>
+                     </div>
+                    <div class="project-content">
+                        <div class="project-header">
+                             <h3>TechStore Backend API</h3>
+                         </div>
+                        <p>API REST moderna para e-commerce desarrollada con Spring Boot. Incluye autenticación JWT, gestión de productos, sistema de usuarios y todas las funcionalidades necesarias para una tienda online.</p>
+                        <div class="project-features">
+                            <span class="feature">✓ Autenticación JWT completa</span>
+                            <span class="feature">✓ Sistema de roles (ADMIN/USER)</span>
+                            <span class="feature">✓ API RESTful con paginación</span>
+                        </div>
+                        <div class="project-tech">
+                            <span class="tech-tag"><i class="fab fa-java"></i> Java 17</span>
+                            <span class="tech-tag"><i class="fas fa-leaf"></i> Spring Boot</span>
+                            <span class="tech-tag"><i class="fas fa-shield-alt"></i> Spring Security</span>
+                            <span class="tech-tag"><i class="fas fa-database"></i> H2 Database</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/jorgeoliver7/techstore-backend" target="_blank" class="project-link"><i class="fab fa-github"></i></a>
                             <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
