--- a/index.html
+++ b/index.html
@@ -654,7 +654,17 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Jorge Acedo. Todos los derechos reservados.</p>
+            <div class="footer-content">
+                <div class="footer-info">
+                    <p>&copy; 2024 Jorge Acedo. Todos los derechos reservados.</p>
+                </div>
+                <div class="footer-actions">
+                    <a href="cv.pdf" class="btn btn-download" download="Jorge_Acedo_CV.pdf">
+                        <i class="fas fa-download"></i>
+                        Descargar CV
+                    </a>
+                </div>
+            </div>
         </div>
     </footer>
 
