Añadir nuevos proyectos: FindYourPrompt y Bet4Fun al portfolio

--- a/index.html
+++ b/index.html
@@ -197,6 +197,60 @@
             </div>
             
             <div class="projects-grid">
+                <div class="project-card" data-category="ai">
+                    <div class="project-image">
+                         <i class="fas fa-robot"></i>
+                     </div>
+                    <div class="project-content">
+                        <div class="project-header">
+                             <h3>FindYourPrompt</h3>
+                         </div>
+                        <p>Plataforma inteligente para descubrir, crear y compartir prompts optimizados para IA. Ayuda a usuarios a encontrar los mejores prompts para sus necesidades específicas con herramientas avanzadas de búsqueda y categorización.</p>
+                        <div class="project-features">
+                            <span class="feature">✓ Búsqueda inteligente de prompts</span>
+                            <span class="feature">✓ Categorización automática</span>
+                            <span class="feature">✓ Interfaz moderna y responsive</span>
+                        </div>
+                        <div class="project-tech">
+                            <span class="tech-tag"><i class="fab fa-react"></i> React</span>
+                            <span class="tech-tag"><i class="fab fa-js-square"></i> JavaScript</span>
+                            <span class="tech-tag"><i class="fas fa-robot"></i> AI Integration</span>
+                            <span class="tech-tag"><i class="fab fa-css3-alt"></i> CSS3</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/jorgeoliver7/findyourprompt" target="_blank" class="project-link"><i class="fab fa-github"></i></a>
+                            <a href="https://findyourprompt-one.vercel.app/" target="_blank" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card" data-category="fullstack">
+                    <div class="project-image">
+                         <i class="fas fa-chart-line"></i>
+                     </div>
+                    <div class="project-content">
+                        <div class="project-header">
+                             <h3>Bet4Fun - Sports Betting</h3>
+                         </div>
+                        <p>Sistema inteligente de recomendaciones de apuestas deportivas que analiza estadísticas en tiempo real, cuotas de casas de apuestas y tendencias de equipos para sugerir apuestas simples y combinadas optimizadas.</p>
+                        <div class="project-features">
+                            <span class="feature">✓ Análisis de estadísticas en tiempo real</span>
+                            <span class="feature">✓ Comparación de cuotas entre casas</span>
+                            <span class="feature">✓ Algoritmo de recomendación avanzado</span>
+                        </div>
+                        <div class="project-tech">
+                            <span class="tech-tag"><i class="fab fa-python"></i> Python</span>
+                            <span class="tech-tag"><i class="fas fa-server"></i> Flask</span>
+                            <span class="tech-tag"><i class="fab fa-react"></i> React</span>
+                            <span class="tech-tag"><i class="fas fa-database"></i> API Integration</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/jorgeoliver7/bet4fun-sports-betting" target="_blank" class="project-link"><i class="fab fa-github"></i></a>
+                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="project-card" data-category="fullstack">
                     <div class="project-image">
                          <i class="fas fa-car"></i>
